refactor(nitrite): move ensureJsonParamsForFilter/findMaxPlaceholderIndex to NitriteQueryBinder, simplify updateEntityId, add regression tests
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>